--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,17 @@
 
 .App-header {
   height: 119px;
-  border-bottom: 1px solid black;
-  /* min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: end;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white; */
+  padding-right: 108px;
 }
 
+p {
+  margin: 0;
+}
+
+.Container {
+  height: 100%;
+}
