feat: add card component and set layout when no cards

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.12/css/weather-icons.min.css');
+body {
+  background: #DCDFE0;
+}
+
 .App {
   height: 100vh;
-  background: #DCDFE0;
 }
 
 .App-header {
@@ -16,6 +20,54 @@ p {
   margin: 0;
 }
 
-.Container {
-  height: 100%;
+.ContainerSearch {
+  height: 140px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.ContainerCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 197px;
+}
+
+.button {
+  width: 219px;
+  height: 59px;
+  background: #219EBC;
+  border-radius: 60px;
+  color: #fff;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 58px;
+}
+
+.containerNoCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.textNoCard {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 47px;
+  color: #9FAAAE;
+  margin-left: 20px;
+  margin-top: -32px;
+}
+
+.iconNoCard {
+  font-size: 100px;
+  color: #9FAAAE;
 }
