--- a/src/components/switch/Switch.module.css
+++ b/src/components/switch/Switch.module.css
@@ -10,6 +10,8 @@
     font-size: 20px;
     color: rgba(2, 48, 71, 0.61);
     align-items: center;
+    position: absolute;
+    cursor: pointer;
 }
 .switch {
     background: #ECECEC;
