--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -1,8 +1,48 @@
 .containerCard {
     width: 501px;
     height: 425.46px;
-    background: #023047;
     border: 1px solid #000000;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 58px;
+}
+.icon {
+    font-size: 50px;
+    margin-top: 36px;
+    margin-left: 36px;
+}
+
+.containerHeader {
+    display:flex;
+    flex-direction: row;
+}
+
+.containerText {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 38px;
+    color: #FFFFFF;
+    margin-top: 26px;
+    margin-left: 71px;
+}
+
+.containerDays {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 33px;
+    color: #FFFFFF;
+    margin: 80px 10px 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.temp {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 10px;
 }
