--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -46,3 +46,9 @@
     justify-content: center;
     margin-top: 10px;
 }
+.iconRemove {
+    font-size: 36px;
+    width: 100%;
+    text-align: center;
+    margin-top: 90px;
+}
